--- a/doc/files.texi
+++ b/doc/files.texi
@@ -176,7 +176,7 @@ file on disk.  Only the active dataset read from the file
 is affected by these subcommands.
 
 @pspp{} tries to automatically detect the encoding of string data in the
-file.  Sometimes, however, this does not work well encoding,
+file.  Sometimes, however, this does not work well,
 especially for files written by old versions of SPSS or @pspp{}.  Specify
 the @subcmd{ENCODING} subcommand with an @acronym{IANA} character set name as its string
 argument to override the default.  The @subcmd{ENCODING} subcommand is a @pspp{}
@@ -910,7 +910,7 @@ qualifier character that appears within a value is doubled.
 @vindex SYSFILE INFO
 
 @display 
-SYSFILE INFO FILE='@var{file_name}'.
+SYSFILE INFO FILE='@var{file_name}' [ENCODING='@var{encoding}'].
 @end display
 
 @cmd{SYSFILE INFO} reads the dictionary in a system file and
@@ -918,6 +918,13 @@ displays the information in its dictionary.
 
 Specify a file name or file handle.  @cmd{SYSFILE INFO} reads that file as
 a system file and displays information on its dictionary.
+
+@pspp{} tries to automatically detect the encoding of string data in
+the file.  Sometimes, however, this does not work well, especially for
+files written by old versions of SPSS or @pspp{}.  Specify the
+@subcmd{ENCODING} subcommand with an @acronym{IANA} character set name
+as its string argument to override the default.  The @subcmd{ENCODING}
+subcommand is a @pspp{} extension.
 
 @cmd{SYSFILE INFO} does not affect the current active dataset.
 
