--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,14 @@ Changes since 0.8.2:
  * The SYSFILE INFO command now accepts an ENCODING subcommand to
    specify the character encoding of string data in the system file.
 
+ * PSPPIRE graphical user interface improvements:
+
+   - File|Open now allows an encoding to be selected for opening
+     system files.
+
+   - File|Display Data File Information|External File... now allows an
+     encoding to be selected.
+
 Changes from 0.8.1 to 0.8.2:
 
  * Charts are now rendered with colours from the Tango palette instead
