--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,8 @@ Changes since 0.8.2:
    - File|Display Data File Information|External File... now allows an
      encoding to be selected.
 
+   - A problem with the Means dialog has been resolved (bug #41433).
+
  * System file related improvements:
 
    - With ENCODING="DETECT", SYSFILE INFO can now help the user to
