Fixed bug importing ODS files.
There was a typo which caused the import of ODS files in the gui to
not properly function.  This change fixes the typo, but also re-arranges
the code such that similar errors are less likely to go unnoticed in the
future.  It also brings the code more in concord with the GNU Coding
Standards (which were written that way exactly to prevent these errors).

Fixes bug #41657

--- a/NEWS
+++ b/NEWS
@@ -19,6 +19,9 @@ Changes since 0.8.2:
 
    - A problem with the Means dialog has been resolved (bug #41433).
 
+   - Several problems related to the input of spreadsheets have been
+     fixed (bug #41657, #41620
+
  * System file related improvements:
 
    - With ENCODING="DETECT", SYSFILE INFO can now help the user to
