--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,9 @@ Changes since 0.8.2:
  * REGRESSION now recognises /STATISTICS=CI(x) which causes confidence
    intervals for the coefficients to be printed.
 
+ * When DESCRIPTIVES calculates Z scores, it now omits cases filtered
+   by the current FILTER settings.
+
  * PSPPIRE graphical user interface improvements:
 
    - Dialog boxes with source  variable lists can now choose the sort
